--- a/sportsio/templates/admin_side/update_order_details.html
+++ b/sportsio/templates/admin_side/update_order_details.html
@@ -3,7 +3,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+        
                 <h2>Update Order Details</h2>
                 <form method="POST" class="minimal-form">
                     {% csrf_token %}
@@ -21,12 +21,14 @@
                         <label for="tracking_number">Tracking Number:</label>
                         <input type="text" id="tracking_number" name="tracking_number" value="{{ order.tracking_number }}" required class="form-control">
                     </div>
-                    
-                    <button type="submit" class="btn btn-primary">Update Order</button>
+                    <div style="padding-top:15px;">
+                    <button type="submit" class="btn btn-sm btn-primary">Update Order</button>
+                    <a class="btn btn-sm btn-primary" href="{% url "order_management"%}">Back</a>
+                    </div>
                 </form>
             </div>
         </div>
-    </div>
+
 
     <script>
         $(document).ready(function() {
